--- a/ListingPg.html
+++ b/ListingPg.html
@@ -406,16 +406,16 @@
     <!-- Footer -->
     <footer class="container-fluid text-center">
         <div class="footer-like-line">
-            <a href="#"><p class="footer-links">About</p></a>
+            <a href="aboutus.html"><p class="footer-links">About</p></a>
             <a href="#"><p class="footer-links">How It Works</p></a>
-            <a href="#"><p class="footer-links">Terms & Privacy</p></a>
+            <a href="#"><p class="footer-links">Terms &amp; Privacy</p></a>
             <a href="#"><p class="footer-links">Cancellation Policy</p></a>
             <a href="#"><p class="footer-links">Blog</p></a>
             <a href="#"><p class="footer-links">Contact</p></a>
         </div>
 
         <div class="footer-like-line">
-            <p class="icon-line" id="copyright">Copyright © 2017 Marta Inc. Made with love in USA & Indonesia</p>
+            <p class="icon-line" id="copyright">Copyright © 2017 Marta Inc. Made with love in USA &amp; Indonesia</p>
             <a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a>
             <a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             <a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a>
